test/force-app/main/default/objects/Equipment__c/fields/Cost_Per_Watt__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Watt__c</fullName>
    <inlineHelpText>Only type this in if &quot;$ Per Unit&quot; is not relevant. Otherwise this will auto-calc based on &quot;$ Per Unit&quot;. This can mean $/W AC or $/W DC depending on Type.</inlineHelpText>
    <label>$ Per Watt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>