test/force-app/main/default/objects/Equipment__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Equipment Catalog</relationshipLabel>
    <relationshipName>Equipment_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>