test/force-app/main/default/objects/Equipment__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Equipment Catalog</relationshipLabel>
    <relationshipName>Equipment_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>