test/force-app/main/default/objects/Equipment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <externalId>true</externalId>
    <label>Model #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>