test/force-app/main/default/objects/Equipment__c/fields/Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit__c</fullName>
    <label>$ Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>