test/force-app/main/default/objects/Equipment__c/fields/Procore_Alias__c.field-meta.xml
<CustomField>
    <fullName>Procore_Alias__c</fullName>
    <inlineHelpText>This is the name of the corresponding budget item in Procore</inlineHelpText>
    <label>Procore Alias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-101-Modules</fullName>
            </value>
            <value>
                <fullName>1-102-Inverters</fullName>
            </value>
            <value>
                <fullName>1-103-Racking &amp; Foundations</fullName>
            </value>
            <value>
                <fullName>1-104-AC BOS</fullName>
            </value>
            <value>
                <fullName>1-104-DC BOS</fullName>
            </value>
            <value>
                <fullName>1-104-MV Equipment</fullName>
            </value>
            <value>
                <fullName>1-104-Monitoring &amp; Controls</fullName>
            </value>
            <value>
                <fullName>1-104-Auxiliary / Other Material</fullName>
            </value>
            <value>
                <fullName>1-104-Shipping &amp; Storage</fullName>
            </value>
            <value>
                <fullName>1-104-Material Contingency</fullName>
            </value>
            <value>
                <fullName>1-105-ES Material</fullName>
            </value>
            <value>
                <fullName>1-105-Control System ES Installation</fullName>
            </value>
            <value>
                <fullName>1-105-Other ES Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>