test/force-app/main/default/objects/Equipment__c/fields/Watts_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Watts_Per_Unit__c</fullName>
    <label>Watts Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>