test/force-app/main/default/objects/Equipment__c/validationRules/Model_filled_in_if_Module_or_Inverter.validationRule-meta.xml
<ValidationRule>
    <fullName>Model_filled_in_if_Module_or_Inverter</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Model__c) ||
 ISBLANK(Manufacturer__c)||
 ISBLANK(Watts_Per_Unit__c))&amp;&amp;
(ISPICKVAL(Type__c, &apos;Inverter&apos;) || ISPICKVAL(Type__c, &apos;Module&apos;))</errorConditionFormula>
    <errorMessage>Please fill in the Model #, Manufacturer and/or $ Per Unit</errorMessage>
</ValidationRule>