test/force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Per_Unit__c</columns>
    <columns>Cost_Per_Watt__c</columns>
    <columns>Model__c</columns>
    <columns>Manufacturer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>