test/force-app/main/default/objects/Equipment__c/listViews/Engineering_Equipment_Selections_List.listView-meta.xml
<ListView>
    <fullName>Engineering_Equipment_Selections_List</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Per_Unit__c</columns>
    <columns>Cost_Per_Watt__c</columns>
    <columns>Procore_Alias__c</columns>
    <columns>Model__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Module,Inverter,MLPE,Racking</value>
    </filters>
    <label>Engineering Equipment Selections List</label>
</ListView>