test/force-app/main/default/objects/Equipment__c/listViews/Equipment_with_Automated_Pricing.listView-meta.xml
<ListView>
    <fullName>Equipment_with_Automated_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Notes__c</columns>
    <columns>Type__c</columns>
    <columns>Per_Unit__c</columns>
    <columns>Procore_Alias__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>*</value>
    </filters>
    <label>Equipment with Automated Pricing</label>
</ListView>