test/force-app/main/default/objects/Equipment__c/listViews/Modules.listView-meta.xml
<ListView>
    <fullName>Modules</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Per_Unit__c</columns>
    <columns>Cost_Per_Watt__c</columns>
    <columns>Watts_Per_Unit__c</columns>
    <columns>Procore_Alias__c</columns>
    <columns>Model__c</columns>
    <columns>Manufacturer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Module</value>
    </filters>
    <label>Modules</label>
</ListView>